# circom-to-acir

./: Cargo.toml  README.md  acir.json
example/: circuit.circom
src/: abi.rs  circuit.rs  main.rs
